--- a/app/assets/stylesheets/pages/home/right_panel/_shell.scss
+++ b/app/assets/stylesheets/pages/home/right_panel/_shell.scss
@@ -12,6 +12,7 @@
   width: 380px;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   transition: right 0.2s ease;
 
   > .detail-close {
@@ -159,6 +160,7 @@
   display: none;
   flex-direction: column;
   flex: 1;
+  min-width: 0;
   min-height: 0;
   overflow: hidden;
 
