--- a/app/assets/stylesheets/pages/home/right_panel/context/_overview.scss
+++ b/app/assets/stylesheets/pages/home/right_panel/context/_overview.scss
@@ -3,11 +3,15 @@
   border: 0;
   border-radius: 0;
   box-shadow: none;
+  min-width: 0;
+  max-width: 100%;
 }
 
 .context-overview {
   padding: 12px 14px 10px;
   border-bottom: 1px solid #1f2633;
+  min-width: 0;
+  max-width: 100%;
 }
 
 .context-kicker {
