--- a/app/assets/stylesheets/pages/home/right_panel/context/_shell.scss
+++ b/app/assets/stylesheets/pages/home/right_panel/context/_shell.scss
@@ -36,6 +36,7 @@
 
   .insight-feed-list {
     flex: 1;
+    min-width: 0;
     overflow-y: auto;
     overflow-x: hidden;
     scrollbar-gutter: stable;
